--- a/lights.css
+++ b/lights.css
@@ -7,6 +7,11 @@
     transform: rotate(180deg);
 }
 
-.switch {
+.cursor {
 	cursor: pointer;
+}
+
+.center-svg {
+    display: block;
+    margin: auto;
 }
